Handle spaces in the name of the mini_installer.

BUG=682277
R=bcwhite@chromium.org

Review-Url: https://codereview.chromium.org/2655473002
Cr-Commit-Position: refs/heads/master@{#446694}

Former-commit-id: bdf8ed5452e3b44255bed8f6fe609204b5b5ddf9